correcting grammar in title

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
-    <title>Site Setup's</title>
+    <title>Site Setups</title>
 </head>
 <body>
     <header>
