--- a/templates/base.html
+++ b/templates/base.html
@@ -18,19 +18,28 @@
             <div class="nav-wrapper">
               <a href="#" class="brand-logo right">Logo</a>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li><a href="#">Sass</a></li>
-                <li><a href="#">Components</a></li>
-                <li><a href="#">JavaScript</a></li>
+                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">New Task</a></li>
+                <li><a href="#">Site Locations</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+
+
               </ul>
             </div>
           </nav>
 
           <!-- mobile navbar -->
           <ul class="sidenav" id="mobile-demo">
-            <li><a href="#">Sass</a></li>
-            <li><a href="#">Components</a></li>
-            <li><a href="#">Javascript</a></li>
-            <li><a href="#">Mobile</a></li>
+            <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">New Task</a></li>
+            <li><a href="#">Site Locations</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
           </ul>
     </header>
 
