Added register page, added the username, password and submit form for the user to register to use the site

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="grey darken-2 text-darken-4 center-align">All Tasks Outstanding</h3>
+<h3 class="darken-2 text-darken-2 center-align">All Tasks Outstanding</h3>
 
 {% endblock %}
