--- a/templates/base.html
+++ b/templates/base.html
@@ -1,56 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
-        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    {% block styles %}
-    {% endblock %}
-    <title>Site Setups</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
+    crossorigin="anonymous" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    type="text/css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+  {% block styles %}
+  {% endblock %}
+  <title>Site Setups</title>
 </head>
+
 <body>
-    <header>
-        <!-- top navbar -->
-        <nav class="nav-extended text-shadow grey darken-3">
-            <div class="nav-wrapper">
-              <a href="#" class="brand-logo right">Logo</a>
-              <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">New Task</a></li>
-                <li><a href="#">Site Locations</a></li>
-                <li><a href="#">Log In</a></li>
-                <li><a href="#">Log Out</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
+  <header>
+    <!-- top navbar -->
+    <nav class="nav-extended text-shadow grey darken-3">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo right">Logo</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">New Task</a></li>
+          <li><a href="#">Site Locations</a></li>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#">Log Out</a></li>
+          <li><a href="{{ url_for('register') }}">Register</a></li>
+        </ul>
+      </div>
+    </nav>
 
+    <!-- mobile navbar -->
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">New Task</a></li>
+      <li><a href="#">Site Locations</a></li>
+      <li><a href="#">Log In</a></li>
+      <li><a href="#">Log Out</a></li>
+      <li><a href="{{ url_for('register') }}">Register</a></li>
+    </ul>
+  </header>
 
-              </ul>
-            </div>
-          </nav>
+  <section>
+    <!-- flash messages are stored here -->
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="row flashes">
+            <h4 class="grey lighten-1 center-align">{{ message }}</h4>
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+  </section>
 
-          <!-- mobile navbar -->
-          <ul class="sidenav" id="mobile-demo">
-            <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">New Task</a></li>
-            <li><a href="#">Site Locations</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="{{ url_for('register') }}">Register</a></li>
-          </ul>
-    </header>
-
+  <main class="container">
     {% block content %}
     {% endblock %}
+  </main>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %}
-    {% endblock %}
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  {% block scripts %}
+  {% endblock %}
 </body>
+
 </html>
