--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-user-circle prefix text-darken-3"></i>
                         <input id="username" name="username" type="text" minlength="5" 
-                            maxlength="15" class="validate" required>
+                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">User Name</label>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
                     <div class="input-field col s12">
                         <i class="fas fa-lock prefix text-darken-3"></i>
                         <input id="password" name="password" type="password" minlength="5" 
-                            maxlength="15" class="validate" required>
+                            maxlength="15" pattern="^[a-zA-Z0-9@#$%&+=]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
