--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <a href="#" class="brand-logo right">Logo</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-          <li><a href="#">Profile</a></li>
+          <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
           <li><a href="#">New Task</a></li>
           <li><a href="#">Site Locations</a></li>
           <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -36,7 +36,7 @@
     <!-- mobile navbar -->
     <ul class="sidenav" id="mobile-demo">
       <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-      <li><a href="#">Profile</a></li>
+      <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
       <li><a href="#">New Task</a></li>
       <li><a href="#">Site Locations</a></li>
       <li><a href="{{ url_for('login') }}">Log In</a></li>
