--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,9 @@
     <!-- top navbar -->
     <nav class="nav-extended text-shadow grey darken-3">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Logo</a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <a href="#" class="brand-logo right">Site Setup Todo List</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down"> 
           <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
           <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
           <li><a href="#">New Task</a></li>
