--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
           <li><a href="#">New Task</a></li>
           <li><a href="#">Site Locations</a></li>
           <li><a href="{{ url_for('login') }}">Log In</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><a href="{{ url_for('logout') }}">Log Out</a></li>
           <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
       <li><a href="#">New Task</a></li>
       <li><a href="#">Site Locations</a></li>
       <li><a href="{{ url_for('login') }}">Log In</a></li>
-      <li><a href="#">Log Out</a></li>
+      <li><a href="{{ url_for('logout') }}">Log Out</a></li>
       <li><a href="{{ url_for('register') }}">Register</a></li>
     </ul>
   </header>
