--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,17 +5,20 @@
 
     <!-- task popouts -->
     <ul class="collapsible popout">
+        {% for task in tasks %}
         <li>
-            <div class="collapsible-header white-text grey darken-1 text-shadow"><i class="fas fa-caret-down"></i>Task 1</div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            <div class="collapsible-header white-text grey darken-1 text-shadow">
+                <i class="fas fa-caret-down"></i>
+                <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+                {% if task.is_urgent == "on" %}
+                    <i class="fas fa-exclamation-circle"></i>
+                {% endif %}
+            </div>
+            <div class="collapsible-body">
+                <strong>Location : </strong><em>{{ task.site_name }}</em>
+                <p>{{ task.task_description }}</p>
+            </div>
         </li>
-        <li>
-            <div class="collapsible-header white-text grey darken-1 text-shadow"><i class="fas fa-caret-down"></i>Task 2</div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-        </li>
-        <li>
-            <div class="collapsible-header white-text grey darken-1 text-shadow"><i class="fas fa-caret-down"></i>Task 3</div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-        </li>
+        {% endfor %}
     </ul>
 {% endblock %}
