--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -3,8 +3,21 @@
 
     <h3 class="text-darken-4 center-align">Add Task</h3>
 
-    <div class="row">
+    <div class="row card-panel grey lighten-4">
         <form class="col s12" method="POST" action="">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-folder text-darken-4 prefix"></i>
+                    <select id="site_name" name="site_name" class="validate" required>
+                        <option value="" disabled selected>Choose Site Location</option>
+                        {% for location in site_name %}
+                            <option value="{{ location.site_name }}">{{ location.site_name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label>Site Location</label>
+                </div>
+            </div>
+            <!-- Task Name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-ruler text-darken-4 prefix"></i>
@@ -13,6 +26,7 @@
                     <label for="task_name">Task Name</label>
                 </div>
             </div>
+            <!-- Task Description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-comment-alt text-darken-4 prefix"></i>
@@ -21,6 +35,7 @@
                     <label for="task_description">Task Description</label>
                 </div>
             </div>
+            <!-- Due Date -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-day text-darken-4 prefix"></i>
@@ -29,6 +44,7 @@
                     <label for="due_date">Due Date</label>
                 </div>
             </div>
+            <!-- Is Urgent? -->
             <div class="row">
                 <div class="input-field col s12">
                     <div class="switch">
@@ -41,7 +57,7 @@
                       </div>
                 </div>
             </div>
-
+            
         </form>
     </div>
 
