Added the POST function to send the new task back to the db, added the validation of how has created the task as well as resolving the fault where I didn't add speech marks to the off in the add_task app.route

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -17,6 +17,7 @@
             <div class="collapsible-body">
                 <strong>Location : </strong><em>{{ task.site_name }}</em>
                 <p>{{ task.task_description }}</p>
+                <p><em>By: {{ task.created_by }}</em></p>
             </div>
         </li>
         {% endfor %}
