--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,12 @@ a {
 .datepicker-date-display {
     background-color: grey;
 }
+
+.btn-small {
+    margin: 5px;
+}
+
+.collapsible-header .col strong {
+    margin: 5px;
+    line-height: 42px;
+}
