--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -9,9 +9,13 @@
                 <div class="input-field col s12">
                     <i class="fas fa-folder text-darken-4 prefix"></i>
                     <select id="site_name" name="site_name" class="validate" required>
-                        <option value="" disabled selected>Choose Site Location</option>
+                        <option value="" disabled >Choose Site Location</option>
                         {% for location in site_name %}
-                            <option value="{{ location.site_name }}">{{ location.site_name }}</option>
+                            {% if location.site_name == task.site_name %}
+                                <option value="{{ location.site_name }}" selected>{{ location.site_name }}</option>
+                            {% else %}
+                                <option value="{{ location.site_name }}">{{ location.site_name }}</option>
+                            {% endif %}
                         {% endfor %}
                     </select>
                     <label>Site Location</label>
@@ -22,7 +26,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-ruler text-darken-4 prefix"></i>
                     <input id="task_name" name="task_name" minlength="5" maxlength="50"
-                        type="text" class="validate" required>
+                        value="{{ task.task_name }}" type="text" class="validate" required>
                     <label for="task_name">Task Name</label>
                 </div>
             </div>
@@ -31,7 +35,9 @@
                 <div class="input-field col s12">
                     <i class="fas fa-comment-alt text-darken-4 prefix"></i>
                     <textarea id="task_description" name="task_description" minlength="5"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                        maxlength="200" class="materialize-textarea validate" required>
+                        {{- task.task_description -}}
+                    </textarea>
                     <label for="task_description">Task Description</label>
                 </div>
             </div>
@@ -40,7 +46,8 @@
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-day text-darken-4 prefix"></i>
                     <input id="due_date" name="due_date" 
-                        type="text" class="datepicker validate" required>
+                        type="text" value="{{ task.due_date }}"
+                         class="datepicker validate" required>
                     <label for="due_date">Due Date</label>
                 </div>
             </div>
@@ -50,7 +57,11 @@
                     <div class="switch">
                         <i class="fas fa-exclamation-triangle text-darken-4 prefix"></i>
                         <label for="is_urgent">
-                            <input type="checkbox" id="is_urgent" name="is_urgent">
+                            {% if task.is_urgent == "on" %}
+                                <input type="checkbox" id="is_urgent" name="is_urgent" checked>
+                            {% else %}
+                                <input type="checkbox" id="is_urgent" name="is_urgent">
+                            {% endif %}
                             <span class="lever"></span>
                             Is Urgent
                         </label>
