--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -71,6 +71,11 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align ">
+                    <!-- cancel button -->
+                    <a href="{{ url_for('get_tasks') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-window-close right"></i>
+                    </a>
+                    <!-- edit task button -->
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
                         Edit Task <i class="fas fa-edit right"></i>
                     </button>
