--- a/templates/locations.html
+++ b/templates/locations.html
@@ -5,19 +5,19 @@
 
 
     <div class="row">
-        <div class="col s12 m6">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title">Card Title</span>
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                    <a href="#">This is a link</a>
+        {% for locations in location %}
+            <div class="col s12 m3">
+                <div class="card grey darken-2 text-shadow center-align">
+                    <div class="card-content white-text">
+                        <span class="card-title">{{ locations.site_name}}</span>
+                    </div>
+                    <div class="card-action">
+                        <a href="#" class="btn green accent-3">Edit</a>
+                        <a href="#" class="btn light-blue darken-1">Delete</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
