--- a/templates/edit_site.html
+++ b/templates/edit_site.html
@@ -17,7 +17,9 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align ">
-                    <a href="{{ url_for('locations') }}" class="btn-large red text-shadow">Cancel</a>
+                    <a href="{{ url_for('locations') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-window-close"></i>
+                    </a>
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
                         Add Location <i class="fas fa-user-edit right"></i>
                     </button>
