--- a/templates/locations.html
+++ b/templates/locations.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="card-action">
                         <a href="{{ url_for('edit_site', site_id=locations._id) }}" class="btn green accent-3">Edit</a>
-                        <a href="#" class="btn light-blue darken-1">Delete</a>
+                        <a href="{{ url_for('delete_site', site_id=locations._id) }}" class="btn light-blue darken-1">Delete</a>
                     </div>
                 </div>
             </div>
