--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -3,6 +3,25 @@
 
     <h3 class="darken-2 text-darken-2 center-align">All Tasks Outstanding</h3>
 
+    <div class="row card-panel grey lighten-4">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Tasks</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_tasks') }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="light-blue darken-2 btn text-shadow">
+                        <i class="fas fa-search left"></i>
+                    </button>
+
+                </div>
+            </div>
+        </form>
+    </div>
+
     <!-- task popouts -->
     <ul class="collapsible popout">
         {% for task in tasks %}
