--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -14,7 +14,7 @@
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_tasks') }}" class="red btn text-shadow">Reset</a>
                     <button type="submit" class="light-blue darken-2 btn text-shadow">
-                        <i class="fas fa-search left"></i>
+                        <i class="fas fa-search left"></i> Search
                     </button>
 
                 </div>
@@ -23,6 +23,7 @@
     </div>
 
     <!-- task popouts -->
+    {% if tasks|length > 0 %}
     <ul class="collapsible popout">
         {% for task in tasks %}
         <li>
@@ -30,7 +31,7 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == task.created_by|lower %}
-                        <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small green accent-4">Delete</a>
+                        <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small red accent-3">Delete</a>
                         <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue accent-4">Edit</a>
                     {% endif %}
                 </div>
@@ -49,4 +50,7 @@
         </li>
         {% endfor %}
     </ul>
+    {% else %}
+        <h3 class="red darken-2 text-darken-2 center-align">No Results Found</h3>
+    {% endif %}
 {% endblock %}
