added the footer template from materalize and in the process of editing this. Added about us page

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -51,6 +51,6 @@
         {% endfor %}
     </ul>
     {% else %}
-        <h3 class="red darken-2 text-darken-2 center-align">No Results Found</h3>
+        <h3 class="red-text darken-2 text-darken-2 center-align">No Results Found</h3>
     {% endif %}
 {% endblock %}
