--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
   {% block styles %}
   {% endblock %}
-  <title>Site Setups</title>
+  <title>Willmore's Site Setups</title>
 </head>
 
 <body>
@@ -20,19 +20,20 @@
     <!-- top navbar -->
     <nav class="nav-extended text-shadow grey darken-3">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Site Setup Todo List</a>
+        <a href="{{ url_for('get_tasks') }}" class="brand-logo right">Willmore's Site Setup's</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down"> 
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
           {% if session.user %}
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-              <li><a href="{{ url_for('locations') }}">Site Locations</a></li>
-            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+          <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+          <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+          <li><a href="{{ url_for('locations') }}">Site Locations</a></li>
+          <li><a href="{{ url_for('logout') }}">Log Out</a></li>
           {% else %}
-            <li><a href="{{ url_for('login') }}">Log In</a></li>
-            <li><a href="{{ url_for('register') }}">Register</a></li>
+          <li><a href="{{ url_for('login') }}">Log In</a></li>
+          <li><a href="{{ url_for('register') }}">Register</a></li>
           {% endif %}
+          <li><a href="{{ url_for('about') }}">About Us</a></li>
         </ul>
       </div>
     </nav>
@@ -41,29 +42,29 @@
     <ul class="sidenav" id="mobile-demo">
       <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
       {% if session.user %}
-        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-        <li><a href="{{ url_for('add_task') }}">New Task</a></li>
-        {% if session.user|lower == "admin"|lower %}
-              <li><a href="{{ url_for('locations') }}">Site Locations</a></li>
-        {% endif %}
-        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-      {% else %}
-        <li><a href="{{ url_for('login') }}">Log In</a></li>
-        <li><a href="{{ url_for('register') }}">Register</a></li>
+      <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+      <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+      {% if session.user|lower == "admin"|lower %}
+      <li><a href="{{ url_for('locations') }}">Site Locations</a></li>
       {% endif %}
-        </ul>
+      <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+      {% else %}
+      <li><a href="{{ url_for('login') }}">Log In</a></li>
+      <li><a href="{{ url_for('register') }}">Register</a></li>
+      {% endif %}
+    </ul>
   </header>
 
   <section>
     <!-- flash messages are stored here -->
     {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        {% for message in messages %}
-          <div class="row flashes">
-            <h4 class="grey lighten-1 center-align">{{ message }}</h4>
-          </div>
-        {% endfor %}
-      {% endif %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="row flashes">
+      <h4 class="grey lighten-1 center-align">{{ message }}</h4>
+    </div>
+    {% endfor %}
+    {% endif %}
     {% endwith %}
   </section>
 
@@ -72,6 +73,34 @@
     {% endblock %}
   </main>
 
+  <footer class="page-footer grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Willmore's Site Setup's</h5>
+          <p class="grey-text text-lighten-4">Welcome to Willmore's Site Setup's</p>
+          <p class="grey-text text-lighten-4">Here is a list of all site setup's that we are currently being </p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -79,5 +108,6 @@
   {% block scripts %}
   {% endblock %}
 </body>
+
 
 </html>
