removed unnecesary code that was commented out, added the about page which has a map to the business location as well as updated the footer

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="darken-2 text-darken-2 center-align">About Willmore's Site Setup's</h3>
+    <h3 class="darken-2 text-darken-2 center-align">About Willmore's Site Setup's</h3>
+    
+    <div class="col s12 m8">
+        <p class="text-shadow center-align">
+            <br>
+            Willmore's Site Setup's was set up in 2013 for IT Companies to add any
+            site setups that they might have for their company.
+            <br>
+            <br>
+            <br>
+            This website is used by many different MSP's, construction companies and
+            any company that has to set up IT equipment in multiple locations.
+            <br>
+        </p>
+        <br>
+        <div class="center-align">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2445.533336184111!2d-2.224941184204536!3d52.19735477975442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870f0f1f34fd735%3A0xf963bea36366c9d7!2sAnbrian%20House%2C%201%20The%20Tything%2C%20Worcester%20WR1%201HD!5e0!3m2!1sen!2suk!4v1633875790603!5m2!1sen!2suk"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
-
+        <p class="text-shadow center-align">
+            We are located in the City Centre of Worcester - pop in and ask for a demo!
+        </p>
+    </div>
 
 {% endblock %}
