--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Willmore's Site Setup's</h5>
-          <p class="grey-text text-lighten-4">Welcome to Willmore's Site Setup's</p>
-          <p class="grey-text text-lighten-4">Here is a list of all site setup's that we are currently being </p>
+          <p class="grey-text text-lighten-4">Anbrian House, Worcester, WR1 1HD</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
