--- a/templates/base.html
+++ b/templates/base.html
@@ -81,12 +81,14 @@
           <p class="grey-text text-lighten-4">Anbrian House, Worcester, WR1 1HD</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Social Media</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Facebook <i class="fab fa-facebook-square"></i></a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Instagram <i class="fab fa-instagram-square"></i></a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Twitter <i class="fab fa-twitter-square"></i></a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/luke-willmore" target="_blank">
+                Linkedin
+                <i class="fab fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
