--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="darken-2 text-darken-2 center-align">About Willmore's Site Setup's</h3>
+    <h3 class="darken-2 text-darken-2 center-align">About Us</h3>
     
     <div class="col s12 m8">
         <p class="text-shadow center-align">
