--- a/templates/base.html
+++ b/templates/base.html
@@ -95,8 +95,12 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2021 Willmore's Site Setup's
+        <a class="social-media right" href="#!"><i class="fab fa-facebook-square fa-lg"></i> </a>
+        <a class="social-media right" href="#!"><i class="fab fa-instagram-square fa-lg"></i> </a>
+        <a class="social-media right" href="#!"><i class="fab fa-twitter-square fa-lg"></i> </a>
+        <a class="social-media right" href="https://www.linkedin.com/in/luke-willmore" target="_blank">
+              <i class="fab fa-linkedin fa-lg"></i></a>
       </div>
     </div>
   </footer>
