--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: Roboto, San serif;
+}
 .text-shadow {
     text-shadow: 2px 2px 2px rgba(0,0,0,0,0.5);
 }
@@ -37,4 +40,8 @@ body {
 .social-media i {
     color: white;
     padding: 3px;
+}
+
+#home-button {
+    margin-bottom: 30px;
 }
