--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row">
-        <div class="col s12 m8 offset-m2" >
-            <div class="card-panel">
-                <h3 class="center-align text-darken-4">
-                    {{username}}'s Profile
-                </h3>
-            </div>
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+        <div class="card-panel">
+            <h3 class="center-align text-darken-4">
+                {{ username }}'s Profile
+            </h3>
         </div>
     </div>
+</div>
 
+<div class="row">
+    <h1 class="center-align text-darken-4 red-text"><em><strong>Page under construction</strong></em></h1>
+    <h3 class="center-align text-darken-4">Please visit the home page for a list of all tasks outstanding</h3>
+</div>
+<div class="center-align">
+    <a href="{{ url_for('get_tasks') }}" class="btn blue accent-3 center-align" id="home-button">Home</a>
+</div>
 {% endblock %}
